# robot-fleet

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  go.mod  go.sum  start.sh
.claude/: settings.json
.github/workflows/: ci.yml
cmd/api/: main.go
cmd/fleetos/: main.go
cmd/ingestion/: main.go
cmd/simulator/: main.go
deploy/docker/: Dockerfile.inference  Dockerfile.processor  Dockerfile.simulator  Dockerfile.web  nginx.conf
deploy/terraform/: main.tf
docs/: architecture.excalidraw  openapi.yaml  production-architecture.excalidraw
inference/: server.py  test_vector_search.py
internal/api/: analytics_handler.go  handler.go  handler_test.go
internal/auth/: auth.go  auth_test.go  oauth2.go  oauth2_test.go
internal/command/: command_test.go
internal/config/: config.go
internal/ingestion/: handler.go  handler_test.go  kafka.go
internal/middleware/: logging.go  metrics.go  ratelimit.go  ratelimit_test.go
internal/models/: api.pb.go  api_grpc.pb.go
internal/service/: analytics_service.go  billing_service.go  command_service.go  inference_service.go  robot_service.go  service_test.go  types.go
internal/simulator/: fleet.go  robot.go
internal/store/: clickhouse.go  interfaces.go  postgres.go  (+3 more)
migrations/: 001_init.sql
platform/: .dockerignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  go.mod  go.sum
playground/: .claudeignore  Makefile  README.md  docker-compose.yml  go.mod
playground/ros2_bridge/: Dockerfile  package.xml  setup.cfg
proto/: api.proto
ros2_bridge/: setup.py
web/: vite.config.ts
(+235 files in other folders)
