<?xml version="1.0"?>
<package format="3">
  <name>fleetos_bridge</name>
  <version>0.1.0</version>
  <description>FleetOS ROS 2 Bridge — publishes robot telemetry as standard ROS 2 topics</description>
  <maintainer email="dev@fleetos.dev">FleetOS</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
